Fixing z-index, links

--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -69,25 +69,29 @@
   .title
     background-image: image-url("header_index.jpg")
     background-attachment: fixed
+    z-index: 20
+    padding-bottom: 10%
+
 
   .section1
     background-image: image-url("header_homes.jpg")
     transform: translateZ(-1px) scale(2)
-    z-index: -1
+    z-index: 10
 
   .section2
     background-image: image-url("kitchen-copy2.jpg")
     /* background-attachment: fixed
+    z-index: 20
 
   .section3
     background-image: image-url("header_wood.jpg")
     transform: translateZ(-1px) scale(2)
-    z-index: -1
+    z-index: 10
 
   .section4
     background-image: image-url("header_design.jpg")
-    z-index: -1
+    z-index: 10
 
   .section5
     background-image: image-url("header_work.jpg")
-    z-index: -1
+    z-index: 10
